--- a/modules/groups/client/views/group-edit.html
+++ b/modules/groups/client/views/group-edit.html
@@ -7,8 +7,7 @@
 			<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
 			<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.group)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
       </button>
-			<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">
-        <span class="glyphicon glyphicon-save"></span><span>Save</span></button>
+			<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">Save</button>
 		</div>
 	</div>
 
@@ -78,8 +77,7 @@
 				<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
 				<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.group)">
           			<span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
-				<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">
-          			<span class="glyphicon glyphicon-save"></span><span>Save</span></button>
+				<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">Save</button>
 			</div>
 		</div>
 
