--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -7,8 +7,7 @@
 			<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
 			<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
       </button>
-			<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">
-				<span class="glyphicon glyphicon-save"></span><span>Save</span></button>
+			<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">Save</button>
 			<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="mainForm.$invalid" ng-click="send(mainForm.$valid)">
 				<span class="glyphicon glyphicon-send"></span><span>Send</span></button>
 		</div>
@@ -87,8 +86,7 @@
 				<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
 				<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)">
 					<span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
-				<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">
-					<span class="glyphicon glyphicon-save"></span><span>Save</span></button>
+				<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">Save</button>
 				<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="mainForm.$invalid" ng-click="send(mainForm.$valid)">
 					<span class="glyphicon glyphicon-send"></span><span>Send</span></button>
 			</div>
