--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -10,7 +10,7 @@
 	            ng-if="canDelete"
 	            ng-click="delete()"><span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
 			<button class="btn btn-primary btn-sm"
-				ng-click="save()"><span class="glyphicon glyphicon-save"></span><span>Save</span></button>
+				ng-click="save()">Save</button>
 			<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#publishNotify"
 				ng-if="canUnpublish"
 				ng-click="unpublish()"><span class="glyphicon glyphicon-minus-sign"></span><span>Unpublish</span></button>
@@ -169,7 +169,7 @@
 					ng-if="canDelete"
 					ng-click="delete()"><span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
 				<button class="btn btn-primary btn-sm"
-					ng-click="save()"><span class="glyphicon glyphicon-save"></span><span>Save</span></button>
+					ng-click="save()">Save</button>
 			</div>
 		</div>
 
