Refactor intake on project - adding the ability to link to existing org, primary contact.  Reworking and extending the user-search directive so that it plays nice with 'select only 1 user' and 'select many users'.

--- a/modules/users/client/views/user-partials/user-company.html
+++ b/modules/users/client/views/user-partials/user-company.html
@@ -78,7 +78,7 @@
 		<div class="col-sm-4">
 			<div class="form-group">
 				<label for="province" class="control-label">Province</label>
-				<select class="form-control input-sm" ng-model="uco.proponent.province" ng-options="key as value for (key, value) in uco.proponent.project.provs"></select>
+				<select class="form-control input-sm" ng-model="uco.proponent.province" ng-options="key as value for (key, value) in uco.provs"></select>
 			</div>
 		</div>
 
