--- a/modules/users/client/views/user-search-chooser.html
+++ b/modules/users/client/views/user-search-chooser.html
@@ -37,7 +37,10 @@
 	<!-- Table must be filterable -->
 	<table class="user-table table table-hover table-scroll" ng-table="tableParams" show-filter="false">
 		<tr ng-repeat="o in $data">
-			<td class="checkbox-col" header-class="'checkbox-col'" header="'ng-table/headers/checkbox.html'">
+			<td ng-click="toggleItem(o)"
+				class="checkbox-col"
+				header-class="'checkbox-col'"
+				header="'ng-table/headers/checkbox.html'">
 				<input type="checkbox" ng-model="checkboxes.items[o._id]" />
 			</td>
 			<td class="name-col" header-class="'name-col'" data-title="'Name'" filter="{'displayName':'text'}" sortable="'displayName'">{{o.displayName}}</a>
@@ -64,5 +67,7 @@
 
 <!-- this is actually what we watch to check/uncheck all checkboxes -->
 <script type="text/ng-template" id="ng-table/headers/checkbox.html">
-	<input type="checkbox" ng-model="checkboxes.checked" id="select_all" name="filter-checkbox" value="" />
+	<div ng-if="!singleselectmode || singleselectmode != 'true'">
+		<input type="checkbox" ng-model="checkboxes.checked" id="select_all" name="filter-checkbox" value="" />
+	</div>
 </script>
