--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -370,43 +370,50 @@
 		</div>
 
 		<div class="edit-project-form tab-pane" ng-show="form.curTab === 'Proponent Info'">
-			<button type="button"
-					x-org-search-chooser
-					x-title="'Set Organization'"
-					x-project="project"
-					class="btn btn-default btn-sm">
-					<span class="glyphicon glyphicon-plus"></span><span>Set Organization</span></button>
-				<div class="row" >
-					<div class="col-sm-8">
-						<div class="form-group">
-							<label for="name" class="control-label">Organization Name</label>
-							<p class="form-control-static">{{ project.proponent.name }}</p>
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="form-group">
-							<label for="website" class="control-label">Website</label>
-							<p class="form-control-static">{{ project.proponent.website }}</p>
-						</div>
-					</div>
-				</div>
-				<button type="button"
-					x-user-search-chooser
-					x-title="'Set Primary Contact'"
-					x-project="project"
-					x-singleselectmode="'true'"
-					x-destination="project.primaryContact"
-					class="btn btn-default btn-sm">
-					<span class="glyphicon glyphicon-plus"></span><span>Set Primary Contact</span></button>
 
-				<div class="row" >
-					<div class="col-sm-8">
-						<div class="form-group">
-							<label for="name" class="control-label">Contact Name</label>
-							<p class="form-control-static">{{ project.primaryContact.displayName }}</p>
-						</div>
+			<fieldset>
+				<legend>Organization</legend>
+				<div class="row">
+					<div class="form-group col-md-4">
+						<label class="control-label">Name</label>
+						<input class="form-control" placeholder="{{ project.proponent.name }}" disabled />
+					</div>
+					<div class="form-group col-md-4">
+						<label class="control-label">Website</label>
+						<input class="form-control" placeholder="{{ project.proponent.website }}" disabled />
 					</div>
 				</div>
+				<div class="form-group no-margin">
+					<button class="btn btn-default btn-sm" type="button"
+						x-org-search-chooser
+						x-title="'Set Organization'"
+						x-project="project">Set Organization</button>
+				</div>
+			</fieldset>
+
+			<hr/>
+			
+			<fieldset>
+				<legend>Primary Contact</legend>
+				<div class="row">
+					<div class="col-md-4 form-group">
+						<label class="control-label">Name</label>
+						<input class="form-control" placeholder="{{ project.primaryContact.displayName }}" disabled />
+					</div>
+					<div class="col-md-4 form-group">
+						<label class="control-label">Email</label>
+						<input class="form-control" placeholder="{{ project.primaryContact.email }}" disabled />
+					</div>
+				</div>
+				<div class="form-group no-margin">
+					<button class="btn btn-default btn-sm" type="button"
+						x-user-search-chooser
+						x-title="'Set Primary Contact'"
+						x-project="project"
+						x-singleselectmode="'true'"
+						x-destination="project.primaryContact">Set Primary Contact</button>
+				</div>
+			</fieldset>
 		</div>
 
 		<div class="edit-project-form tab-pane" ng-show="form.curTab === 'Intake Profile'">
