--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -21,7 +21,7 @@
 				<td data-title="'Subject'" filter="{'subject':'text'}"    sortable="'subject'" >{{o.subject}}</td>
 				<td data-title="'Stages'"   filter="{'stages':'text'}"  sortable="'stages'" >{{o.stageString}}</td>
 				<td data-title="'Pillars'"  filter="{'pillars':'text'}" sortable="'pillars'"  >{{o.pillarString}}</td>
-				<td ng-if="showedit" class="actions-col action-x1" header-class="'actions-col action-x1'">
+				<td class="actions-col action-x1" header-class="'actions-col action-x1'">
 					<a ng-click="$event.stopPropagation()" class="btn btn-link btn-sm" ui-sref="admin.condition.edit({conditionId:o._id})">
 						<span class="glyphicon glyphicon-pencil"></span>
 					</a>
