--- a/modules/projects/client/views/project-partials/project.schedule.milestone.add.modal.html
+++ b/modules/projects/client/views/project-partials/project.schedule.milestone.add.modal.html
@@ -11,7 +11,8 @@
 		<select class="form-control"
 						ng-model="selectedMilestoneType"
 						ng-options="milestone as milestone.name for milestone in options"
-						ng-selected="selectedMilestoneType === milestone">
+						ng-selected="selectedMilestoneType === milestone"
+						ng-change="changeOption()">
 			<!-- <option ng-repeat="milestone in rMilestonesForPhase" value="{{ milestone.code }}">{{ milestone.name }}</option> -->
 		</select>
 	</div>
