--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -4487,8 +4487,8 @@ section.project-info {
 }
 
 .project-map {
-	.panel {
-		margin-bottom: 0;
+	.angular-google-map-container {
+		height: 30rem;
 	}
 }
 
@@ -4909,12 +4909,11 @@ section.project-info {
 	}
 
 	.phase-action-col {
-		width: 13rem;
+		width: 11rem;
 		padding-right: 0;
 
 		.label, .btn {
 			display: block;
-			width: 100%;
 			height: 2.1rem;
 			font-weight: normal;
 		}
