--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -20,104 +20,139 @@
 
 		<!-- BEGIN: PROJECT PHASE CONTAINER -->
 		<div class="panel panel-default accordion" id="phaseGroup" ng-repeat="phase in project.phases">
-			<div class="panel-heading" role="tab">
-				<a class="clearfix" role="button" data-toggle="collapse" href="#{{phase.code}}" aria-expanded="true" aria-controls="{{phase.code}}">
-					<span class="glyphicon glyphicon-triangle-right pull-left"></span>
-					<span class="glyphicon glyphicon-triangle-bottom pull-left"></span>
-					<span class="pull-left">{{phase.name}}</span>
-					<span class="label label-success pull-right" ng-if="phase.status === 'Complete'">Completed &nbsp;-&nbsp; {{phase.dateCompleted | amDateFormat:'MMM DD, YYYY'}}</span>
-					<span class="pull-right hidden">&nbsp;Estimated: {{phase.dateStartedEst | date : format : timezone}} / {{phase.dateCompletedEst | date : format : timezone}}</span>
-					<span class="pull-right hidden">&nbsp;Actual: {{phase.dateStarted | date : format : timezone}} / {{phase.dateCompleted | date : format : timezone}}</span>
+			<div class="panel-heading flex-row" role="tab">
+				<a class="collapse-control" role="button" data-toggle="collapse" href="#{{phase.code}}" aria-expanded="true" aria-controls="{{phase.code}}">
+					<span class="pull-left">
+						<span class="glyphicon glyphicon-triangle-right pull-left"></span>
+						<span class="glyphicon glyphicon-triangle-bottom pull-left"></span>
+						<span>{{phase.name}}</span>
+					</span>
+					<span class="label label-success pull-right" ng-if="phase.status === 'Complete'">Completed - {{phase.dateCompleted | date : format : timezone}}</span>
 				</a>
 			</div>
 			<div id="{{phase.code}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="{{phase.code}}">
 				<div class="panel-body">
-					<div ng-if="project.userCan.editSchedule" class="button-bar clearfix">
-						<div class="pull-left">
-							<button class="btn btn-default btn-sm"
-									ng-if="phase.code !== 'intake'"
-									ng-click="addMilestone(phase)"><span class="glyphicon glyphicon-plus"></span><span>Add Milestone</span></button>
-							<button class="btn btn-default btn-sm hidden"
-									ng-if="phase.code !== 'intake'"
-									data-toggle="modal"
-									data-backdrop="false"
-									data-target="#addCommentSessionModal">Add Comment Period</button>
+					<div class="phase-info clearfix">
+						<div class="phase-dates pull-left clearfix">
+							<div class="schedule-dates pull-left">
+								<label class="date-label">Estimated Phase Dates</label>
+								<div>
+									<label>START:</label>
+									<span>{{phase.dateStartedEst | date : format : timezone}}</span>
+								</div>
+								<div>
+									<label>END:</label>
+									<span>{{phase.dateCompletedEst | date : format : timezone}}</span>
+								</div>
+							</div>
+							<div class="schedule-dates pull-left">
+								<label class="date-label">Actual Phase Dates</label>
+								<div>
+									<label>START:</label>
+									<span>{{phase.dateStarted | date : format : timezone}}</span>
+								</div>
+								<div>
+									<label>END:</label>
+									<span>{{phase.dateCompleted | date : format : timezone}}</span>
+								</div>
+							</div>
 						</div>
 						<div class="pull-right">
-							<button class="btn btn-default btn-sm"
+							<button class="btn btn-default btn-sm" title="Remove Phase from Schedule"
 									ng-click="selectPhase(phase)"
 									ng-if="phase.code !== 'intake'"
 									data-toggle="modal"
 									data-backdrop="false"
-									data-target="#deletePhaseModal"><span class="glyphicon glyphicon-trash"></span><span>Delete Phase</span></button>
-							<button class="btn btn-default btn-sm"
+									data-target="#deletePhaseModal"><span class="glyphicon glyphicon-remove"></span><span>Remove</span></button>
+							<button class="btn btn-default btn-sm" title="Remove Phase Details"
 									ng-click="selectPhase(phase)"
 									data-toggle="modal"
 									data-backdrop="false"
-									data-target="#editPhaseDetailModal"><span class="glyphicon glyphicon-pencil"></span><span>Edit Phase</span></button>
-							<button class="btn btn-primary btn-sm"
+									data-target="#editPhaseDetailModal"><span class="glyphicon glyphicon-pencil"></span><span>Edit</span></button>
+							<button class="btn btn-primary btn-sm" title="Complete Phase"
 									ng-click="completePhase(phase)"
-									ng-if="phase.code === project.currentPhase.code && !project.currentPhase.completed">Complete Phase</button>
-							<button class="btn btn-primary btn-sm"
+									ng-if="phase.code === project.currentPhase.code && !project.currentPhase.completed">Complete</button>
+							<button class="btn btn-primary btn-sm" title="Uncomplete Phase"
 									ng-click="selectPhase(phase)"
 									ng-if="isLastCompletePhase(phase._id)"
 									data-toggle="modal"
 									data-backdrop="false"
-									data-target="#uncompletePhaseModal">Uncomplete Phase</button>
+									data-target="#uncompletePhaseModal">Uncomplete</button>
 							<button class="btn btn-primary btn-sm"
 									ng-click="startNextPhase(project)"
 									ng-if="isNextPhase(phase._id) && phase.status === 'Not Started'">Start Phase</button>
 						</div>
 					</div>
-					<div class="phase-schedule">
-						<table class="table no-border">
-							<thead>
-								<tr>
-									<th class="name-col">Name</th>
-									<th class="date-col">Estimate Dates</th>
-									<th class="date-col">Actual Dates</th>
-									<th class="phase-action-col"></th>
-									<th class="actions-col action-x2"></th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr ng-repeat="milestone in milestonesForPhases[phase._id]">
-									<td>{{milestone.name}}</td>
-									<td class="date-col">
-										<div><label>Start:</label><span>{{milestone.dateStartedEst | date : format : timezone}}</span></div>
-										<div><label>End:</label><span>{{milestone.dateCompletedEst | date : format : timezone}}</span></div>
-									</td>
-									<td class="date-col">
-										<div><label>Start:</label><span>{{milestone.dateStarted | date : format : timezone}}</span></div>
-										<div><label>End:</label><span>{{milestone.dateCompleted | date : format : timezone}}</span></div>
-									</td>
-									<!-- <td>-Template Link-</tdf> -->
-									<td class="phase-action-col">
-										<span class="label label-success" ng-if="milestone.status === 'Complete'">Completed</span>
-										<div ng-if="project.userCan.editSchedule">
-											<button class="btn btn-primary btn-xs"
-													ng-if="milestone.status === 'Not Started'"
-													ng-click="startMilestone(milestone)">Start Milestone</button>
-											<button class="btn btn-primary btn-xs"
-													ng-if="milestone.status === 'In Progress'"
-													ng-click="completeMilestone(milestone)">Mark Complete</button>
-										</div>
-									</td>
-									<td class="actions-col action-x2" ng-if="project.userCan.editSchedule">
-										<button class="btn btn-default btn-sm" ng-click="openEditMilestone(milestone)">
-											<span class="glyphicon glyphicon-pencil"></span>
-										</button>
-										<button class="btn btn-default btn-sm" ng-click="openDeleteMilestone(milestone)">
-											<span class="glyphicon glyphicon-remove"></span>
-										</button>
-									</td>
-								</tr>
-								<tr ng-if="phase.milestones.length == 0">
-									<td colspan="5">No Milestones Scheduled for this Phase</td>
-								</tr>
-							</tbody>
-						</table>
+
+					<div class="phase-milestones">
+						<div class="panel panel-default">
+							<div class="panel-heading flex-row">
+								<h3>Milestones</h3>
+								<div class="actions" ng-if="project.userCan.editSchedule">
+									<button class="btn btn-default btn-sm"
+										ng-if="phase.code !== 'intake'"
+										ng-click="addMilestone(phase)"><span class="glyphicon glyphicon-plus"></span><span>Add Milestone</span></button>
+									<button class="btn btn-default btn-sm hidden"
+											ng-if="phase.code !== 'intake'"
+											data-toggle="modal"
+											data-backdrop="false"
+											data-target="#addCommentSessionModal">Add Comment Period</button>
+								</div>
+							</div>
+							<table class="milestone-table table">
+								<thead>
+									<tr>
+										<th class="name-col">Name</th>
+										<th class="date-col">Estimate Dates</th>
+										<th class="date-col">Actual Dates</th>
+										<th class="phase-action-col"></th>
+										<th class="actions-col action-x2"></th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr ng-repeat="milestone in milestonesForPhases[phase._id]">
+										<td>{{milestone.name}}</td>
+										<td class="date-col">
+											<div class="schedule-dates">
+												<div><label>START:</label><span>{{milestone.dateStartedEst | date : format : timezone}}</span></div>
+												<div><label>END:</label><span>{{milestone.dateCompletedEst | date : format : timezone}}</span></div>
+											</div>
+										</td>
+										<td class="date-col">
+											<div class="schedule-dates">
+												<div><label>START:</label><span>{{milestone.dateStarted | date : format : timezone}}</span></div>
+												<div><label>END:</label><span>{{milestone.dateCompleted | date : format : timezone}}</span></div>
+											</div>
+										</td>
+										<!-- <td>-Template Link-</tdf> -->
+										<td class="phase-action-col">
+											<span class="label label-success" ng-if="milestone.status === 'Complete'">Completed</span>
+											<div ng-if="project.userCan.editSchedule">
+												<button class="btn btn-primary btn-xs"
+														ng-if="milestone.status === 'Not Started'"
+														ng-click="startMilestone(milestone)">Start Milestone</button>
+												<button class="btn btn-primary btn-xs"
+														ng-if="milestone.status === 'In Progress'"
+														ng-click="completeMilestone(milestone)">Mark Complete</button>
+											</div>
+										</td>
+										<td class="actions-col action-x2" ng-if="project.userCan.editSchedule">
+											<button class="btn btn-default btn-sm" ng-click="openEditMilestone(milestone)">
+												<span class="glyphicon glyphicon-pencil"></span>
+											</button>
+											<button class="btn btn-default btn-sm" ng-click="openDeleteMilestone(milestone)">
+												<span class="glyphicon glyphicon-remove"></span>
+											</button>
+										</td>
+									</tr>
+									<tr ng-if="phase.milestones.length == 0">
+										<td colspan="5">No Milestones Scheduled for this Phase</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
@@ -133,7 +168,7 @@
 				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				<h3 class="modal-title">Delete Phase &nbsp;&rsaquo;&nbsp; {{selectedPhase.name}}</h3>
+				<h3 class="modal-title">Remove Phase &nbsp;&rsaquo;&nbsp; {{selectedPhase.name}}</h3>
 			</div>
 			<div class="modal-body">
 				Are you sure you want to delete this phase?
