--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -171,16 +171,15 @@
 				<h3 class="modal-title">Remove Phase &nbsp;&rsaquo;&nbsp; {{selectedPhase.name}}</h3>
 			</div>
 			<div class="modal-body">
-				Are you sure you want to delete this phase?
+				Are you sure you want to remove this phase?
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-				<button ng-click="deletePhase(selectedPhase)" type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>
+				<button ng-click="deletePhase(selectedPhase)" type="button" class="btn btn-danger" data-dismiss="modal">Remove</button>
 			</div>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- DELETE PHASE MODAL -->
+		</div>
+	</div>
+</div><!-- DELETE PHASE MODAL -->
 
 <!-- UNCOMPLETE PHASE MODAL -->
 <div class="modal fade" id="uncompletePhaseModal" role="dialog" tabindex="-1">
@@ -199,14 +198,13 @@
 				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 				<button ng-click="uncompletePhase(selectedPhase)" type="button" class="btn btn-danger" data-dismiss="modal">Uncomplete</button>
 			</div>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- UNCOMPLETE PHASE MODAL -->
+		</div>
+	</div>
+</div><!-- UNCOMPLETE PHASE MODAL -->
 
 <!-- EDIT MILESTONE MODAL -->
 <div class="modal fade" id="editPhaseDetailModal" role="dialog" tabindex="-1">
-	<div class="modal-dialog add-phase-dialog">
+	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
@@ -215,37 +213,34 @@
 				<h3 class="modal-title">Edit Phase &nbsp;&rsaquo;&nbsp; {{selectedPhase.name}}</h3>
 			</div>
 			<div class="modal-body">
-				<div class="form-group has-error" ng-class="{'has-error': validateForm}">
-					<label>Actual Date Range</label>
-					<div class="date-range-control clearfix">
-						<div class="date-range pull-left">
-							<div class="input-group">
-								<p x-modal-date-picker x-selected-date="selectedPhase.dateStarted" class="btn form-control-static">{{ selectedPhase.dateStarted | amDateFormat:'MMM Do YYYY' }} &nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i>&nbsp; &nbsp;</p>
-							</div>
+				<div class="form-group" ng-class="{'has-error': validateForm}">
+					<label>Estimated Date Range</label>
+					<div class="form-inline">
+						<div class="form-control date-picker"
+							x-modal-date-picker 
+							x-selected-date="selectedPhase.dateStartedEst">
+							{{ selectedPhase.dateStartedEst | amDateFormat:'MMM Do YYYY' }}
+							<span class="glyphicon glyphicon-calendar"></span>
 						</div>
-						<div class="pull-left spacer">-</div>
-						<div class="date-range pull-left">
-							<div class="input-group">
-								<p x-modal-date-picker x-selected-date="selectedPhase.dateCompleted" class="btn form-control-static">{{ selectedPhase.dateCompleted | amDateFormat:'MMM Do YYYY' }} &nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i>&nbsp; &nbsp;</p>
-							</div>
+						<span> &nbsp;-&nbsp; </span>
+						<div class="form-control date-picker" 
+							x-modal-date-picker x-selected-date="selectedPhase.dateCompletedEst">
+							{{ selectedPhase.dateCompletedEst | amDateFormat:'MMM Do YYYY' }}
+							<span class="glyphicon glyphicon-calendar"></span>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="modal-body">
-				<div class="form-group has-error" ng-class="{'has-error': validateForm}">
-					<label>Estimated Date Range</label>
-					<div class="date-range-control clearfix">
-						<div class="date-range pull-left">
-							<div class="input-group">
-								<p x-modal-date-picker x-selected-date="selectedPhase.dateStartedEst" class="btn form-control-static">{{ selectedPhase.dateStartedEst | amDateFormat:'MMM Do YYYY' }} &nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i>&nbsp; &nbsp;</p>
-							</div>
+				<div class="form-group no-margin" ng-class="{'has-error': validateForm}">
+					<label>Actual Date Range</label>
+					<div class="form-inline">
+						<div class="form-control date-picker" x-modal-date-picker x-selected-date="selectedPhase.dateStarted">
+							{{ selectedPhase.dateStarted | amDateFormat:'MMM Do YYYY' }}
+							<span class="glyphicon glyphicon-calendar"></span>
 						</div>
-						<div class="pull-left spacer">-</div>
-						<div class="date-range pull-left">
-							<div class="input-group">
-								<p x-modal-date-picker x-selected-date="selectedPhase.dateCompletedEst" class="btn form-control-static">{{ selectedPhase.dateCompletedEst | amDateFormat:'MMM Do YYYY' }} &nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i>&nbsp; &nbsp;</p>
-							</div>
+						<span> &nbsp;-&nbsp; </span>
+						<div class="form-control date-picker" x-modal-date-picker x-selected-date="selectedPhase.dateCompleted">
+							{{ selectedPhase.dateCompleted | amDateFormat:'MMM Do YYYY' }}
+							<span class="glyphicon glyphicon-calendar"></span>
 						</div>
 					</div>
 				</div>
@@ -261,7 +256,7 @@
 
 <!-- ADD COMMENT SESSION MODAL -->
 <div class="modal fade" id="addCommentSessionModal" role="dialog" tabindex="-1">
-	<div class="modal-dialog modal-lg add-comment-dialog">
+	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
