--- a/modules/projects/client/views/project-partials/project.schedule.milestone.edit.modal.html
+++ b/modules/projects/client/views/project-partials/project.schedule.milestone.edit.modal.html
@@ -1,37 +1,54 @@
 <div class="modal-header">
-	<h3 class="modal-title">Edit Milestone</h3>
+	<button class="btn btn-default close" ng-click="cancel()"><span aria-hidden="true">×</span></button>
+	<h3 class="modal-title" title="Edit Milestone &nbsp;&rsaquo;&nbsp; {{ milestone.name }}">Edit Milestone &nbsp;&rsaquo;&nbsp; {{ milestone.name }}</h3>
 </div>
 
 <form name="dataForm" ng-submit="save(dataForm.$valid)" novalidate>
 	<div class="modal-body">
-		<div class="form-group">
-			<div>Milestone: {{ milestone.name }}</div>
+		<div class="form-group" ng-class="{'has-error': validateForm}">
+			<label class="control-label">Estimated Date Range</label>
+			<div class="form-inline">
+				<div class="form-group" >
+					<div class="form-control date-picker" 
+						x-modal-date-picker 
+						x-selected-date="milestone.dateStartedEst">
+						{{ milestone.dateStartedEst | amDateFormat:'MMM Do YYYY' }}
+						<span class="placeholder-value" ng-if="!milestone.dateStartedEst">Start Date</span>
+						<span class="glyphicon glyphicon-calendar"></span>
+					</div>
+				</div>
+				<span> &nbsp;-&nbsp; </span>
+				<div class="form-group">
+					<div class="form-control date-picker" 
+						x-modal-date-picker 
+						x-selected-date="milestone.dateCompletedEst">
+						{{ milestone.dateCompletedEst | amDateFormat:'MMM Do YYYY' }}
+						<span class="placeholder-value" ng-if="!milestone.dateCompletedEst">End Date</span>
+						<span class="glyphicon glyphicon-calendar"></span>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="form-group has-error" ng-class="{'has-error': validateForm}">
-			<!-- <label>Date Range / Effective Date?</label> -->
-			<div class="date-range-control clearfix">
+		<div class="form-group no-margin" ng-class="{'has-error': validateForm}">
+			<label class="control-label">Actual Date Range</label>
+			<div class="form-inline">
 				<div class="form-group">
-					<label class="control-label">Date Started Estimate</label>
-					<div class="input-group">
-							<p class="form-control-static">{{ milestone.dateStartedEst | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="milestone.dateStartedEst" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
+					<div class="form-control date-picker" 
+						x-modal-date-picker 
+						x-selected-date="milestone.dateStarted">
+						{{ milestone.dateStarted | amDateFormat:'MMM Do YYYY' }}
+						<span class="placeholder-value" ng-if="!milestone.dateStarted">Start Date</span>
+						<span class="glyphicon glyphicon-calendar"></span>
 					</div>
 				</div>
+				<span> &nbsp;-&nbsp; </span>
 				<div class="form-group">
-					<label class="control-label">Date Completed Estimate</label>
-					<div class="input-group">
-							<p class="form-control-static">{{ milestone.dateCompletedEst | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="milestone.dateCompletedEst" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label">Date Started Actual</label>
-					<div class="input-group">
-							<p class="form-control-static">{{ milestone.dateStarted | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="milestone.dateStarted" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label">Date Completed Actual</label>
-					<div class="input-group">
-							<p class="form-control-static">{{ milestone.dateCompleted | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="milestone.dateCompleted" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
+					<div class="form-control date-picker" 
+						x-modal-date-picker 
+						x-selected-date="milestone.dateCompleted">
+						{{ milestone.dateCompleted | amDateFormat:'MMM Do YYYY' }}
+						<span class="placeholder-value" ng-if="!milestone.dateCompleted">End Date</span>
+						<span class="glyphicon glyphicon-calendar"></span>
 					</div>
 				</div>
 			</div>
