ESM-545 - Re-instate Proponent Info to Edit Project Detail
- Added templates for multi and single select components for the user-search-chooser.html
- Fixed a small issue with a missing icon on the 'Edit Project' button.

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -78,7 +78,7 @@ $sidenav-width:				19rem;
 /* Tables */
 $table-bg: 					#FFF;
 $table-row-bg: 				#FFF;
-$table-row-hover-bg:		#EEE;
+$table-row-hover-bg:		#eef5fc;
 $table-row-active-bg:		#1a5a96;
 $table-head-bg: 			#F7F8FA;
 $table-filter-bg: 			#FFF;
