Fixed naming convention on 'Add' button in the user-search-chooser.html

--- a/modules/users/client/views/user-search-chooser.html
+++ b/modules/users/client/views/user-search-chooser.html
@@ -109,7 +109,7 @@
 
 <div class="modal-footer">
 	<button type="button" class="btn btn-default" ng-click="s.cancel()">Cancel</button>
-	<button type="button" class="btn btn-primary" ng-click="s.ok()">DERP</button>
+	<button type="button" class="btn btn-primary" ng-click="s.ok()">Add</button>
 </div>
 
 <!-- this is actually what we watch to check/uncheck all checkboxes -->
